--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script src="%PUBLIC_URL%/lib/epub.js"></script>
-    <script src="%PUBLIC_URL%/lib/zip.min.js"></script>
+    <!-- <script src="%PUBLIC_URL%/lib/epub.js"></script> -->
+    <!-- <script src="%PUBLIC_URL%/lib/zip.min.js"></script> -->
 
 
 
@@ -26,18 +26,18 @@
     <div id="root"></div>
 
 
-    <div onclick="Book.prevPage();">Click here</div>
+    <!-- <div onclick="Book.prevPage();">Click here</div>
 
     <div id="area"></div>
 
-    <div onclick="Book.nextPage();">Next page</div>
+    <div onclick="Book.nextPage();">Next page</div> -->
 
 
-    <script>
+    <!-- <script>
       var Book = ePub('%PUBLIC_URL%/moby-dick.epub');
 
       Book.renderTo('area');
-    </script>
+    </script> -->
 
   </body>
 </html>
